fix spacing issue in project

--- a/src/scss/Experience.scss
+++ b/src/scss/Experience.scss
@@ -42,7 +42,7 @@
     
     .leftColumn {
         width: 40%;
-        margin-right: 5%;
+        margin-right: 24px;
         // min-height: 200px;
         min-width: 200px;
         text-align: right;
